core/errors/src/main/java/com/example/errors/NoInternetException.kt
package com.example.errors

class NoInternetException : BaseNetworkException()
